`sendAnalyticsEvemt` doc: Fix links

--- a/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
+++ b/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
@@ -6,7 +6,7 @@ The `sendAnalyticsEvent` function triggers events in the browser, following the 
 
 { /* Remember to add a link to 'custom events' once we have the following task done: EDU-13545 */ }
 
-> ⚠️ `sendAnalyticsEvent` doesn't send events to any analytics provider. To intercept events triggered by this function, use the [`useAnalyticsEvent`](/LINK) hook.
+> ⚠️ `sendAnalyticsEvent` doesn't send events to any analytics provider. To intercept events triggered by this function, use the [`useAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-use-analytics-event) hook.
 
 ## Import
 
@@ -44,7 +44,7 @@ const MyComponent = () => {
 }
 ```
 
-Check the list of [available types](/LINK).
+Check the list of [available types](https://developers.vtex.com/docs/guides/faststore/analytics-overview#list-of-native-event-types).
 
 ## Exporting custom event types with generics
 
