--- a/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
+++ b/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
@@ -1,5 +1,5 @@
 ---
-title: "`sendAnalyticsEvent`"
+title: "sendAnalyticsEvent"
 ---
 
 The `sendAnalyticsEvent` function triggers events in the browser, following the [Google Analytics 4 (GA4) data model](https://developers.google.com/analytics/devguides/collection/ga4/reference/events). This function is primarily used for ecommerce tracking but also supports custom events , serving as a centralized point for managing events
