Apply suggestions from code review
Co-authored-by: Larícia Mota <lariciamota@gmail.com>

--- a/docs/faststore/docs/sdk/analytics/use-analytics-event.mdx
+++ b/docs/faststore/docs/sdk/analytics/use-analytics-event.mdx
@@ -2,7 +2,7 @@
 title: "useAnalyticsEvent"
 ---
 
-The `useAnalyticsEvent` hook intercepts both native and custom events triggered by the [`sendAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-send-analytics-event) function. The hook automatically detects the events sent by `sendAnalyticsEvent`) and provides a response to them.
+The `useAnalyticsEvent` hook intercepts both native and custom events triggered by the [`sendAnalyticsEvent`](https://developers.vtex.com/docs/guides/faststore/analytics-send-analytics-event) function. The hook automatically detects the events sent by `sendAnalyticsEvent` and provides a response to them.
 
 { /* Remember to add a link to 'custom events' once we have the following task done: EDU-13545 */ }
 
