Apply suggestions from code review
Co-authored-by: Larícia Mota <lariciamota@gmail.com>

--- a/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
+++ b/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
@@ -26,6 +26,7 @@ import { sendAnalyticsEvent } from '@faststore/sdk'
 
 const MyComponent = () => {
   const addToCartCallback = useCallback(() => {
+   import('@faststore/sdk').then(({ sendAnalyticsEvent }) => {
     /* ... */
 
     const addToCartEvent = {
@@ -38,6 +39,7 @@ const MyComponent = () => {
     }
 
     sendAnalyticsEvent(addToCartEvent)
+    })
   }, [])
 
   return <button onClick={addToCartCallback}>Add to cart</button>
