--- a/docs/faststore/docs/customization/building-sections/creating-a-new-section.mdx
+++ b/docs/faststore/docs/customization/building-sections/creating-a-new-section.mdx
@@ -355,7 +355,7 @@ After creating a new section, you can style it to match your store's branding. F
 
 6. Update the `OuStore.tsx` file by 
   
-  ```tsx mark="14,16"
+  ```tsx mark="14-16"
   import React from 'react'
   import { Button, Icon, SelectField } from '@faststore/ui'
 
