--- a/docs/faststore/docs/customization/building-sections/creating-a-new-section.mdx
+++ b/docs/faststore/docs/customization/building-sections/creating-a-new-section.mdx
@@ -308,7 +308,7 @@ After creating a new section, you can style it to match your store's branding. F
 
 5. Add more styles to the section by using [design tokens](https://developers.vtex.com/docs/guides/faststore/global-tokens-overview#global-tokens) and [component's data attributes](https://developers.vtex.com/docs/guides/faststore/atoms-button#customization) to the `ourStores.module.scss` file:
 
-  ```scss
+  ```scss mark=6:42
   .ourStores {
     @import '@faststore/ui/src/components/atoms/Button/styles.scss';
     @import '@faststore/ui/src/components/atoms/Select/styles.scss';
