--- a/docs/faststore/docs/customization/building-sections/creating-a-new-section.mdx
+++ b/docs/faststore/docs/customization/building-sections/creating-a-new-section.mdx
@@ -353,9 +353,9 @@ After creating a new section, you can style it to match your store's branding. F
   }
   ```
 
-6. Update the `OuStore.tsx` file by 
+6. Update the `OuStore.tsx` file by adding new CSS classes to style the title and the `SelectedField`.
   
-  ```tsx mark=14,15,16
+  ```tsx mark=14:16
   import React from 'react'
   import { Button, Icon, SelectField } from '@faststore/ui'
 
