--- a/docs/faststore/docs/reference/themes/midnight.mdx
+++ b/docs/faststore/docs/reference/themes/midnight.mdx
@@ -6,7 +6,7 @@ slug: midnight
 
 A darkmode theme for your storefront.
 
-![](https://vtexhelp.vtexassets.com/assets/docs/src/midnight___2bb274e36a39ff9c2cfa3dcc740cbfab.png)
+![midnight-theme](https://vtexhelp.vtexassets.com/assets/docs/src/midnight___2bb274e36a39ff9c2cfa3dcc740cbfab.png)
 
 ## Use `midnight` as your theme
 
@@ -168,9 +168,9 @@ A darkmode theme for your storefront.
 }
 ```
 
-3. Go to `faststore.config.js` and change the `theme` to `midnight`:
+3. Go to `discovery.config.js` and change the `theme` to `midnight`:
 
-```js filename="faststore.config.js"
+```js filename="discovery.config.js"
 theme: 'midnight',
 ```
 
