Apply suggestions from code review
Co-authored-by: Larícia Mota <lariciamota@gmail.com>

--- a/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
+++ b/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
@@ -30,8 +30,8 @@ const MyComponent = () => {
     /* ... */
 
     const addToCartEvent = {
-      type: 'add_to_cart',
-      data: {
+      name: 'add_to_cart',
+      params: {
         items: [
           /* ... */
         ],
