--- a/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
+++ b/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
@@ -4,6 +4,15 @@ title: "Improving store performance with Preact"
 
 Enabling [Preact](https://preactjs.com/) in your FastStore project can reduce the package size used in the project and improve performance. Preact is a lightweight alternative to [React](https://react.dev/) that improves performance by reducing the size of the JavaScript bundle. Enabling Preact decreases the overall build size in a FastStore project, resulting in faster page load times and better performance.
 
+## Before you begin
+
+Bear in mind the following:
+
+Preact is an experimental feature in FastStore. Therefore, it has some limitations and might cause side effects in certain customizations. Before using it
+in the production environment, make sure to test it to ensure compatibility with your store context.
+
+Limited Feature Compatibility Preact is a lightweight alternative to React and does not support all React features. Some advanced APIs or third-party libraries designed specifically for React may not work seamlessly.
+
 > ⚠️ This is an experimental feature.
 
 | Before Preact | After Preact |
