Review "Before you begin" paragraph

--- a/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
+++ b/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
@@ -11,7 +11,7 @@ Bear in mind the following:
 Preact is an experimental feature in FastStore. Therefore, it has some limitations and might cause side effects in certain customizations. Before using it
 in the production environment, make sure to test it to ensure compatibility with your store context.
 
-Limited Feature Compatibility Preact is a lightweight alternative to React and does not support all React features. Some advanced APIs or third-party libraries designed specifically for React may not work seamlessly.
+As Preact is a lightweight alternative to React and does not support all React features, some advanced APIs or third-party libraries designed specifically for React may not work seamlessly.
 
 > ⚠️ This is an experimental feature.
 
