--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -314,6 +314,16 @@ All product card related components support all attributes also supported by the
     token="--fs-product-card-transition-timing"
     value="var(--fs-transition-timing)"
   />
+  <TokenDivider />
+  <TokenRow
+    token="--fs-product-card-sponsored-label-size"
+    value="var(--fs-text-size-tiny)"
+  />
+  <TokenRow
+    token="--fs-product-card-sponsored-label-color"
+    value="var(--fs-color-text-light)"
+    isColor
+  />
 </TokenTable>
 
 ### Nested Elements
@@ -718,6 +728,8 @@ Use the `ProductCard` to:
 `data-fs-product-card-actions`
 
 `data-fs-product-card-taxes-label`
+
+`[data-fs-product-card-sponsored-label]`
 
 ---
 
