Apply suggestions from code review
Co-authored-by: Fanny Chien <fanny.chien@vtex.com>

--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -729,7 +729,7 @@ Use the `ProductCard` to:
 
 `data-fs-product-card-taxes-label`
 
-`[data-fs-product-card-sponsored-label]`
+`data-fs-product-card-sponsored-label`
 
 ---
 
