--- a/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
+++ b/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
@@ -4,15 +4,6 @@ title: "Improving store performance with Preact"
 
 Enabling [Preact](https://preactjs.com/) in your FastStore project can reduce the package size used in the project and improve performance. Preact is a lightweight alternative to [React](https://react.dev/) that improves performance by reducing the size of the JavaScript bundle. Enabling Preact decreases the overall build size in a FastStore project, resulting in faster page load times and better performance.
 
-## Before you begin
-
-Before implementing Preact, take the following considerations:
-
-- Preact is an experimental feature in FastStore. Therefore, it has some limitations and might cause side effects in certain customizations. Before using it in the production environment, make sure to test it to ensure compatibility with your store context.
-
-- As Preact is a lightweight alternative to React and does not support all React features, some advanced APIs or third-party libraries designed specifically for React may not work seamlessly.
-
-> ⚠️ This is an experimental feature.
 
 | Before Preact | After Preact |
 | ------------- | ------------ |
@@ -21,7 +12,23 @@ Before implementing Preact, take the following considerations:
 
 ## Before you begin
 
+Before implementing Preact, take the following considerations:
+
+<Steps>
+
+### Update `@faststore/cli` package
+
 Make sure the `@faststore/cli` package from your project is updated to the latest version. To do so, follow the instructions in [Updating the '@fastore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
+
+### Understand the experimental nature of Preact
+
+Preact is currently an experimental feature, which may have limitations and could cause issues with some store customizations.
+
+- Before using it in the production environment, make sure to test it to ensure compatibility with your store.
+
+- Preact is a lightweight alternative to React, with reduced feature support. This may lead to compatibility issues with advanced React APIs and some third-party libraries.
+
+</Steps>
 
 ## Instructions
 
