--- a/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
+++ b/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
@@ -26,7 +26,7 @@ Preact is currently an experimental feature, which may have limitations and coul
 
 - Before using it in the production environment, make sure to test it to ensure compatibility with your store.
 
-- Preact is a lightweight alternative to React, with reduced feature support. This may lead to compatibility issues with advanced React APIs and some third-party libraries.
+- Preact is a lightweight alternative to [React](https://react.dev/), with reduced feature support. This may lead to compatibility issues with advanced React APIs and some third-party libraries.
 
 </Steps>
 
