Add link to the file

--- a/docs/faststore/docs/go-live/2-configuring-external-dns.mdx
+++ b/docs/faststore/docs/go-live/2-configuring-external-dns.mdx
@@ -101,7 +101,7 @@ Take the following example of how this code block would look after configuring a
 
 #### Adding `subDomainPrefix` for prefixed domains
 
-To ensure customers can view products in the secured environment on your store final domain, add the `subDomainPrefix` property to the `dicovery.config.js` file. 
+To ensure customers can view products in the secured environment on your store final domain, add the `subDomainPrefix` property to the [`dicovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#files) file. 
 The `subDomainPrefix` property maintains compatibility between cookies set in the storefront and the secure environment.
 
 To add the `subDomainPrefix` property, follow these steps:
@@ -118,7 +118,7 @@ To add the `subDomainPrefix` property, follow these steps:
    },
    ```
 
-   > ⚠ Replace 'xxx' from `subDomainPrefix` property with the actual subdomain prefix (e.g., `'b2b'`). If you have multiple prefixes, add them as an array of strings (e.g., ['b2b', 'dev']).
+   > ⚠ Replace `'xxx'` from `subDomainPrefix` property with the actual subdomain prefix (e.g., `['b2b']`). If you have multiple prefixes, add them as an array of strings (e.g., `['b2b', 'dev']`).
 
 4. Save your changes.
 5. Open a Pull Request, commit your changes, and deploy them to `main`.
