Fix discovery filename

--- a/docs/faststore/docs/reference/project-structure/overview.mdx
+++ b/docs/faststore/docs/reference/project-structure/overview.mdx
@@ -15,7 +15,7 @@ Let's start taking a look at the structure that represents the source code of a 
     |-- /themes
         |-- custom-theme.scss
 |-- cypress.config.ts
-|-- faststore.config.js
+|-- discovery.config.js
 |-- next-env.d.ts
 |-- package.json
 |-- README.md
@@ -43,8 +43,8 @@ Let's start taking a look at the structure that represents the source code of a 
 
 - `cypress.config.ts` - Configures the options and preferences required for running tests with Cypress.
 
-- [`faststore.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) - Configures aspects of the project such as SEO preferences, VTEX account options, and theme. Note that these configurations are set during the [onboarding process](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview), reducing the need for changes to this file.
-For more information on configuration options for this file, refer to [Configuration options for faststore.config.js](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options).
+- [`discovery.config.js`](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options) - Configures aspects of the project such as SEO preferences, VTEX account options, and theme. Note that these configurations are set during the [onboarding process](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview), reducing the need for changes to this file.
+For more information on configuration options for this file, refer to [Configuration options for discovery.config.js](https://developers.vtex.com/docs/guides/faststore/project-structure-config-options).
 
 - `next-env.d.ts` - Generates a TypeScript definition file for Next.js.
   
