Apply suggestions from code review

--- a/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
+++ b/docs/faststore/docs/customization/building-sections/experimental-exports-hooks-and-components.mdx
@@ -79,7 +79,7 @@ Hooks provide features or statuses from native components that you can integrate
 |`useProductQuery_unstable`|Retrieves product details.|
 |`useProductsPrefetch_unstable`|Preloads product details for a given list of product IDs.|
 |`useSearchHistory_unstable`|Accesses the user's search history.|
-| `useScreenResize` | Creates more flexible interfaces that adapt to different screen sizes and devices.|
+| `useScreenResize_unstable` | Creates more flexible interfaces that adapt to different screen sizes and devices.|
 |`useSuggestions_unstable`|Provides suggestions based on the user's search query.|
 |`useTopSearch_unstable`|Retrieves the top search results.|
 |`useFilter_unstable`|Enables filtering for product listings.|
