--- a/docs/faststore/docs/integrating-with-vtex-products/integrating-with-vtex-ad-network.mdx
+++ b/docs/faststore/docs/integrating-with-vtex-products/integrating-with-vtex-ad-network.mdx
@@ -37,7 +37,7 @@ Create a campaign with valid products to be displayed to the store. To do this, 
 4. Access your store locally by using the URL shown in the terminal (usually `http://localhost:3000/`).
 5. On the store website, search for a product included in the [VTEX Ad Network campaign](#create-a-campaign). The example below shows the **Fantastic Concrete Shirt** as the sponsored product.
 
-    ![sponsored-product](https://github.com/user-attachments/assets/164af908-fdb4-4f14-99fe-e760a67e2558)
+    ![sponsored-product](https://vtexhelp.vtexassets.com/assets/docs/src/faststore-ad-network___fc69fdbd20990eefb318ddbca16d4cd0.png)
 
 > ℹ Sponsored products may appear more than once, depending on advertiser settings.
 
