--- a/docs/faststore/components/organisms/sku-matrix.mdx
+++ b/docs/faststore/components/organisms/sku-matrix.mdx
@@ -1,6 +1,6 @@
 ---
 title: SKUMatrix
-excerpt: Open and close the slider, control the state of the SKUs: change the quantity of items to be added to the cart, return the list of product variations
+excerpt: Open and close the slider, control the state of the SKUs by changing the quantity of items to be added to the cart and returning the list of product variations
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/sku-matrix___747ffd8a2b4d421e964e1a684226b552.png
 components:
