--- a/docs/faststore/components/organisms/sku-matrix.mdx
+++ b/docs/faststore/components/organisms/sku-matrix.mdx
@@ -75,7 +75,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 <TokenTable>
   <TokenRow
     token="--fs-sku-matrix-sidebar-bkg-color"
-    value=var(--fs-color-body-bkg)"
+    value="var(--fs-color-body-bkg)"
   />
 </TokenTable>  
 
