--- a/docs/faststore/components/organisms/sku-matrix.mdx
+++ b/docs/faststore/components/organisms/sku-matrix.mdx
@@ -40,13 +40,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Usage
 
-<Tabs items={['Example', 'Code']} defaultIndex="0">
-  <Tab>
-    <OverviewSection containerStyle={{ justifyContent: 'center' }}>
-     
-    
-  </Tab>
-</Tabs>
+**ADD USAGE EXAMPLE**
 
 ---
 
