Added content about performance

--- a/docs/faststore/docs/go-live/overview.mdx
+++ b/docs/faststore/docs/go-live/overview.mdx
@@ -241,6 +241,7 @@ To ensure that you have set up all configurations for your store to run smoothly
 <li>Run Lighthouse audits on your store's Home Page, Product Listing Page (PLP), Product Details Page (PDP), and custom pages.</li>
 <li>All pages must have Lighthouse Score equal or more than 60 on mobile devices.</li>
 <li>Any publication will be automatically blocked by the system until all checks pass.</li>
+<li>For more information about store performance, refer to the [Managing performance](https://developers.vtex.com/docs/guides/faststore/managing-performance-overview)track and the [Lighthouse Integration on WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#integrations).</li>
 </ul>
 </details>
 
