Update before you begin

--- a/docs/faststore/docs/go-live/before-you-begin.mdx
+++ b/docs/faststore/docs/go-live/before-you-begin.mdx
@@ -6,17 +6,17 @@ Before each production goes live, contact the FastStore team at least four weeks
 
 <Steps>
 
-### Account Edition
+### Configured the account edition
 
 Your account edition is set to `vtex.edition-store@5.x` Edition app in your master workspace.
 
 > ⚠️ If you do not have the appropriate Edition app installed, [open a support ticket](https://help.vtex.com/support) requesting the installation of the `vtex.edition-store@5.x Edition` app in your master workspace.
 
-### FastStore Onboarding
+### Deployed the project with FastStore WebOps
 
-The project was deployed during the [FastStore Onboarding](https://developers.vtex.com/docs/guides/faststore/getting-started-overview) process.  
+The project was deployed with [FastStore WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview) app.  
 
-### Storefront development
+### Developed the storefront
 
 The storefront was developed during the [Setting Up the Project](https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project).
 
@@ -24,4 +24,4 @@ The storefront was developed during the [Setting Up the Project](https://develop
 
 ## Next
 
-Now, start integrating your FastStore project with VTEX by [Setting up a VTEX account for FastStore](https://developers.vtex.com/docs/guides/faststore/go-live-1-setting-up-vtex-account-for-faststore)
+Now, start integrating your FastStore project with VTEX by [Configuring external DNS](https://developers.vtex.com/docs/guides/faststore/go-live-1-setting-up-vtex-account-for-faststore)
