--- a/docs/faststore/docs/go-live/before-you-begin.mdx
+++ b/docs/faststore/docs/go-live/before-you-begin.mdx
@@ -24,4 +24,4 @@ The storefront was developed during the [Setting Up the Project](https://develop
 
 ## Next
 
-Now, start integrating your FastStore project with VTEX by [Configuring external DNS](https://developers.vtex.com/docs/guides/faststore/go-live-1-setting-up-vtex-account-for-faststore)
+Now, start integrating your FastStore project with VTEX by [Configuring external DNS](https://developers.vtex.com/docs/guides/faststore/go-live-1-configuring-external-dns).
