Apply suggestions from code review
Co-authored-by: Fanny Chien <fanny.chien@vtex.com>

--- a/docs/faststore/components/organisms/sku-matrix.mdx
+++ b/docs/faststore/components/organisms/sku-matrix.mdx
@@ -115,26 +115,19 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Customization
 
-`data-fs-table`
+`data-fs-sku-matrix`
 
-`data-fs-table-cell`
-
-`data-fs-table-head`
-
-`data-fs-slide-over`
-
-`data-fs-slide-over-size="partial"`
+`data-fs-sku-matrix-sidebar`
 
 `data-fs-sku-matrix-sidebar-title`
 
-`data-fs-price-variant`
+`data-fs-sku-matrix-sidebar-cell-image`
 
 `data-fs-sku-matrix-sidebar-table-price`
 
 `data-fs-sku-matrix-sidebar-table-cell-quantity-selector`
 
-`data-fs-sku-matrix-sidebar-cell-image`
-
-`data-fs-quantity-selector`
+`data-fs-sku-matrix-sidebar-table-action`
 
 `data-fs-sku-matrix-sidebar-footer`
+
