Update before you begin

--- a/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
+++ b/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
@@ -12,8 +12,7 @@ Besides making your FastStore website accessible via a custom domain, **VTEX Che
 
 ## Before you begin
 
-   - [Set up your VTEX account.](https://developers.vtex.com/docs/guides/faststore/go-live-1-setting-up-vtex-account-for-faststore)
-   - Develop your FastStore project with **Next.js** by following the [Getting Started track](https://developers.vtex.com/docs/guides/faststore/getting-started-overview).
+   - Develop your FastStore project by following the [Getting Started track](https://developers.vtex.com/docs/guides/faststore/getting-started-overview).
    - Deploy your FastStore project.
    - Buy the desired domain.
    - [Redirect the **root domain** to the `www` subdomain.](https://help.vtex.com/en/tutorial/configuring-access-without-www--tutorials_4278#root-domain-redirect-without-www)
