--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -11,7 +11,7 @@ sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Button___6d6b16886d5d7e2a05dba8c45c075796.png
 ---
 
-Buttons indicate actions that users can take, such as adding an item to the cart, submitting a form, and proceeding with an operation.
+Buttons indicate faststore actions that users can take, such as adding an item to the cart, submitting a form, and proceeding with an operation.
 
 ## Overview
 
