--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -13,6 +13,7 @@ sidebar_custom_props:
 
 Buttons indicate faststore actions that users can take, such as adding an item to the cart, submitting a form, and proceeding with an operation.
 
+<li>For more information about store performance, refer to the <a href="https://developers.vtex.com/docs/guides/faststore/managing-performance-overview">Managing performance</a> track and the <a href="https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#integrations">Lighthouse Integration on WebOps</a> guide.</li>
 
 ## Overview
 
