--- a/docs/faststore/docs/sdk/analytics/overview.mdx
+++ b/docs/faststore/docs/sdk/analytics/overview.mdx
@@ -56,3 +56,23 @@ To send the events to Google Analytics, use the [`useAnalyticsEvent`](https://de
 By leveraging the type definitions in the Analytics module, you can use [IntelliSense](https://code.visualstudio.com/docs/editor/intellisense) suggestions for code hinting.
 
 ![IntelliSense](https://vtexhelp.vtexassets.com/assets/docs/src/intellisense___44c8c3c8f2687f88e787ce38f867901c.png)
+
+## Next steps
+
+<Flex>
+
+<WhatsNextCard
+  linkTo="https://developers.vtex.com/docs/guides/faststore/analytics-send-analytics-event"
+  title="sendAnalyticsEvent"
+  description="The sendAnalyticsEvent function enables the triggering and management of analytics events in stores, following the Google Analytics 4 (GA4) data model."
+  linkTitle="See more"
+/>
+
+<WhatsNextCard
+  linkTo="https://developers.vtex.com/docs/guides/faststore/analytics-use-analytics-event"
+  title="useAnalyticsEvent"
+  description="The useAnalyticsEvent hook enables intercepting and responding to both native and custom analytics events triggered by the sendAnalyticsEvent function."
+  linkTitle="See more"
+/>
+
+</Flex>
