fix callout link

--- a/docs/faststore/docs/go-live/2-integrating-the-vtex-login.mdx
+++ b/docs/faststore/docs/go-live/2-integrating-the-vtex-login.mdx
@@ -93,7 +93,7 @@ To implement a redirect, you need to create a [Pixel App](https://developers.vte
    </script>
    ```
 
-   > ⚠ Replace https://www.{addDomainName}.com with your store's main domain. For example, if the store's main domain is `https://www.mystore.com`, set the `const` as the following: `const redirectDomain = decodeURIComponent("https://www.mystore.com")`. 
+   > ⚠ Replace `https://www.{addDomainName}.com` with your store's main domain. For example, if the store's main domain is `https://www.mystore.com`, set the `const` as the following: `const redirectDomain = decodeURIComponent("https://www.mystore.com")`. 
 
 3. Complete the remaining steps in the [Pixel app](https://developers.vtex.com/docs/guides/vtex-io-documentation-1-developnativeintegrationswithpixelapps) track to inject the script into your store's login page.
 
