Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/docs/sdk/analytics/overview.mdx
+++ b/docs/faststore/docs/sdk/analytics/overview.mdx
@@ -64,14 +64,14 @@ By leveraging the type definitions in the Analytics module, you can use [Intelli
 <WhatsNextCard
   linkTo="https://developers.vtex.com/docs/guides/faststore/analytics-send-analytics-event"
   title="sendAnalyticsEvent"
-  description="The sendAnalyticsEvent function enables the triggering and management of analytics events in stores, following the Google Analytics 4 (GA4) data model."
+  description="Learn how to trigger and manage analytics events in your store using the sendAnalyticsEvent function, which follows the Google Analytics 4 (GA4) data model."
   linkTitle="See more"
 />
 
 <WhatsNextCard
   linkTo="https://developers.vtex.com/docs/guides/faststore/analytics-use-analytics-event"
   title="useAnalyticsEvent"
-  description="The useAnalyticsEvent hook enables intercepting and responding to both native and custom analytics events triggered by the sendAnalyticsEvent function."
+  description="Learn how to use the useAnalyticsEvent hook to intercept and respond to both native and custom analytics events triggered by the sendAnalyticsEvent function."
   linkTitle="See more"
 />
 
