Fix CMS Portal (Legacy) name

--- a/docs/faststore/docs/go-live/2-integrating-the-vtex-login.mdx
+++ b/docs/faststore/docs/go-live/2-integrating-the-vtex-login.mdx
@@ -26,9 +26,9 @@ The VTEX Login is provided by the `vtexcommercestable` environment and uses a su
 ### Step 1 - Adding a redirect back to your FastStore domain
 
 By completing this step, shoppers will be redirected back to your website's main domain after logging in or completing a checkout.
-The instructions to complete this step depend on whether your store uses the My Account and Checkout pages in the [CMS Portal (Legacy)](#for-legacy-cms-portal-stores) or [Store Framework](#for-store-framework-stores).
+The instructions to complete this step depend on whether your store uses the My Account and Checkout pages in the [CMS Portal (Legacy)](#for-cms-portal-legacy-stores) or [Store Framework](#for-store-framework-stores).
 
-#### For Legacy CMS Portal stores
+#### For CMS Portal (Legacy) stores
 
 1. Access the VTEX Admin.
 2. Go to **Storefront > Layout**.
