--- a/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
+++ b/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
@@ -61,7 +61,7 @@ Back to your FastStore project, you must also configure your project to point to
 2. Open the `discovery.config.js` file.
 3. Update the `storeUrl`, `secureSubdomain`, `checkoutUrl`, `loginUrl`, and `accountUrl` properties as in the following:
 
-   - **`storeUrl`**: `https://{rootDomain}`
+   - **`storeUrl`**: `https://{storeDomain}`
    - **`secureSubdomain`**: `https://{subdomain}.{rootDomain}`
    - **`checkoutUrl`**: `https://{subdomain}.{rootDomain}/checkout`
    - **`loginUrl`**: `https://{subdomain}.{rootDomain}/api/io/login`
