added references about 'Configuring the store domain' guide

--- a/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
+++ b/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
@@ -37,6 +37,8 @@ To proceed, make sure your store is active and in production, to do this, follow
 
 Now, you must set up your VTEX account to use the DNS records created in the previous step.
 
+> ℹ For more information about store domain configuration, see the [Configuring the store domain](https://help.vtex.com/en/tutorial/configuring-the-store-domain--tutorials_2450) guide.
+
 1. On VTEX Admin, click your profile avatar, which can be identified by the first letter of your email address.
 2. Access **Account Settings > Account**.
 3. Go to the **Stores** tab and in the **Hosts** table, click the menu (**⋮**) and choose **Edit**.
@@ -150,5 +152,6 @@ To add the `subDomainPrefix` property, follow these steps:
 
 ## Related Resources
 
+   - [Configuring the store domain](https://help.vtex.com/en/tutorial/configuring-the-store-domain--tutorials_2450)
    - [Setting up DNS pointing to VTEX](https://help.vtex.com/tracks/go-live-your-store--4Ns5FxIiksmjsdX2yOTduM/12bQlMbJ68Ot0LIaO6Btkj#setting-up-dns-pointing)
    - [How to insert a reverse proxy in front of VTEX services](https://help.vtex.com/en/tutorial/how-to-insert-a-reverse-proxy-in-front-of-vtex-services)
