Apply suggestions from code review
Co-authored-by: Júlia Rabello <77292838+julia-rabello@users.noreply.github.com>

--- a/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
+++ b/docs/faststore/docs/go-live/1-configuring-external-dns.mdx
@@ -154,4 +154,4 @@ To add the `subDomainPrefix` property, follow these steps:
 
    - [Configuring the store domain](https://help.vtex.com/en/tutorial/configuring-the-store-domain--tutorials_2450)
    - [Setting up DNS pointing to VTEX](https://help.vtex.com/tracks/go-live-your-store--4Ns5FxIiksmjsdX2yOTduM/12bQlMbJ68Ot0LIaO6Btkj#setting-up-dns-pointing)
-   - [How to insert a reverse proxy in front of VTEX services](https://help.vtex.com/en/tutorial/how-to-insert-a-reverse-proxy-in-front-of-vtex-services)
+   - [Insert a reverse proxy in front of VTEX services](https://help.vtex.com/en/tutorial/insert-reverse-proxy-in-front-of-vtex-services--4PFWsfRAKviNVPf1bYdiir)
