--- a/docs/faststore/docs/managing-performance/managing-lazy-loading-sections-on-plp.mdx
+++ b/docs/faststore/docs/managing-performance/managing-lazy-loading-sections-on-plp.mdx
@@ -17,49 +17,49 @@ Make sure the `@faststore/cli` package is updated to the latest version. If you 
 ### Step 1: Configuring SEO for Product Listing Pages (PLP)
 
 Configure the title and description templates for product listing pages (PLP) in the discovery.config.js file to optimize your store's SEO and allow dynamically generating metadata based on the collection name.
- 
+
 1. Open your FastStore project in a code editor of your preference.
 2. Go to the `discovey.config.js` file and in the `seo` section add the following:
 
-    ```discovery.config.js
-    seo: {
-        plp: {
-        titleTemplate: '%s | FastStore PLP',
-        descriptionTemplate: '%s products on FastStore Product Listing Page',
-        },
-    },
-    ```
+   ```discovery.config.js
+   seo: {
+       plp: {
+       titleTemplate: '%s | FastStore PLP',
+       descriptionTemplate: '%s products on FastStore Product Listing Page',
+       },
+   },
+   ```
 
-	> ⚠ Change the values in `titleTemplate` and `descriptionTemplate` according to your collection’s name.
+   > ⚠ Change the values in `titleTemplate` and `descriptionTemplate` according to your collection’s name.
 
 ### Step 2: Controlling lazy loading for custom sections
 
-By default, sections in FastStore are lazy-loaded for performance reasons. However, some sections (e.g., those containing H1 headers) may need to appear in the initial HTML for SEO purposes. To achieve this, you can configure a section to skip lazy loading. 
+By default, sections in FastStore are lazy-loaded for performance reasons. However, some sections (e.g., those containing H1 headers) may need to appear in the initial HTML for SEO purposes. To achieve this, you can configure a section to skip lazy loading.
 
 1. Open the `cms/faststore/sections.json` file in your project.
-2. Locate the custom section, add the `skipLazyLoadingSection` property, and set it to `true`. In the following example, we created new custom section called `CustomCollectionName` that  displays the store collection name:
+2. Locate the custom section, add the `skipLazyLoadingSection` property, and set it to `true`. In the following example, we created new custom section called `CustomCollectionName` that displays the store collection name:
 
 ```sections.json
 …
 {
-        "name": "CustomCollectionName",
-        "schema": {
-          "title": "Collection Name",
-          "description": "Custom H1 configuration",
-          "type": "object",
-          "required": ["skipLazyLoadingSection"],
-          "properties": {
-            "skipLazyLoadingSection": {
-              "title": "Skip lazy loading",
-              "type": "boolean",
-              "default": true
-            }
-          }
-        }
+  "name": "CustomCollectionName",
+  "schema": {
+    "title": "Collection Name",
+    "description": "Custom H1 configuration",
+    "type": "object",
+    "required": ["skipLazyLoadingSection"],
+    "properties": {
+      "skipLazyLoadingSection": {
+        "title": "Skip lazy loading",
+        "type": "boolean",
+        "default": true
+      }
+    }
   }
+}
 ```
 
-### Step 3: Accessing collection data in a custom section	
+### Step 3: Accessing collection data in a custom section
 
 To display the collection name or other SEO-related data in a custom section, use the [`usePLP()`](https://developers.vtex.com/docs/guides/faststore/api-extensions-consuming-api-extensions#consuming-api-extensions-data-from-custom-sections) hook in the section’s file:
 
@@ -84,24 +84,25 @@ export default function CustomCollectionName() {
 3. Access the **Product List Page** Content Type.
 4. Add the custom section you created. At the end of the section, you’ll notice the **Skip lazy loading** option.
 
-    ![skip-lazy-loading-ui-option](https://vtexhelp.vtexassets.com/assets/docs/src/skip-lazy-loading-option___32bda38cafbf728774a30ad9ada8be01.png)
+   ![skip-lazy-loading-ui-option](https://vtexhelp.vtexassets.com/assets/docs/src/skip-lazy-loading-option___32bda38cafbf728774a30ad9ada8be01.png)
 
 5. Click `Save` and publish the changes you made.
 6. Click `Preview`.
 7. Search for a collection name to see your new section. For example, if you have `Just arrived` collection added to the store slug, for example: `https://mystore.vtex.app/just-arrived`. You’ll be able to see something similar to the following:
 
-![custom-section-ui](https://vtexhelp.vtexassets.com/assets/docs/src/custom-section___48bf7d70d678b4fb4ddae39aa0cf14cb.png)
+    ![custom-section-ui](https://vtexhelp.vtexassets.com/assets/docs/src/custom-section___48bf7d70d678b4fb4ddae39aa0cf14cb.png)
 
 ### Checking if the custom section is visible to search engines
 
 To make sure that the custom section is present in the initial HTML response, follow these steps:
+
 1. In the browser, right-click anywhere on the page and select **Inspect** from the context menu.
 2. In the **Developer Tools** panel, click on the **Network tab**. Ensure that the **All filter** is selected.
 3. Reload the page while the Developer Tools are open. This will capture all network requests made during the page load.
 4. In the **Name** column of the **Network** tab, look for the request corresponding to the page you're inspecting In our example `just-arrived`.
-5. Click on the **Response** tab in this panel.
+5. Click the **Response** tab in this panel.
 6. If the section is present in the initial HTML response, you will see the corresponding HTML code in the **Response** tab. For example:
 
-    ![developer-tools-panel](https://vtexhelp.vtexassets.com/assets/docs/src/developer-tools-panel___9240a6f4b36ce8151f6d346e78674f2b.png)
+   ![developer-tools-panel](https://vtexhelp.vtexassets.com/assets/docs/src/developer-tools-panel___9240a6f4b36ce8151f6d346e78674f2b.png)
 
 If the section is present in the initial HTML, as in the example above, it means it is not lazy-loaded and is visible to search engines.
